# C_PROGRAMMING

./: CMakeLists.txt  ForLoop.c  FucntionCalculator.c  FunctionC.c  FunctionPasByValue.c  FunctionPointerReference.c  HelloWorld.c  InputArray.c  Operators.c  Operators.h  PointerOneDArray.c  README.md  arrayArgs.c  ifstatement.c  ifstatementcalculator.c  main.c  mmm.c  oneDimension.c  pointers.c  pointers.h  switchcase.c  switchcasecalculator.c  twoDimensional.c  variables.c
header/: FucntionCalculator.h  FunctionC.h  ifstatementcalculator.h  oneDimension.h  pointers.h  switchcase.h  switchcasecalculator.h  twoDimensional.h
